# AuCensusDataToJson

./: CMakeLists.txt  CreateJsons.cpp  CreateJsons.h  Main.cpp  NameConversions.cpp  NameConversions.h  README.md  Trie.cpp  Trie.h  TrieElement.cpp  TrieElement.h
SmallCensusData/2021 Census GCP All Geographies for OT/CED/OT/: 2021Census_G01_OT_CED.csv  2021Census_G02_OT_CED.csv  2021Census_G03_OT_CED.csv  2021Census_G04A_OT_CED.csv  2021Census_G04B_OT_CED.csv  2021Census_G05_OT_CED.csv  2021Census_G06_OT_CED.csv  2021Census_G07_OT_CED.csv  2021Census_G08_OT_CED.csv  2021Census_G09A_OT_CED.csv  2021Census_G09B_OT_CED.csv  2021Census_G09C_OT_CED.csv  2021Census_G09D_OT_CED.csv  2021Census_G09E_OT_CED.csv  2021Census_G09F_OT_CED.csv  2021Census_G09G_OT_CED.csv  2021Census_G09H_OT_CED.csv  2021Census_G10A_OT_CED.csv  2021Census_G10B_OT_CED.csv  2021Census_G10C_OT_CED.csv  2021Census_G11A_OT_CED.csv  2021Census_G11B_OT_CED.csv  2021Census_G11C_OT_CED.csv  2021Census_G11D_OT_CED.csv  2021Census_G12A_OT_CED.csv  2021Census_G12B_OT_CED.csv  2021Census_G13A_OT_CED.csv  2021Census_G13B_OT_CED.csv  (+89 more)
SmallCensusData/2021Census_geog_desc_1st_2nd_3rd_release/: 2021_ASGS_GCCSA_Structure-Table 1.csv  2021_ASGS_Indigenous_Structures-Table 1.csv  2021_ASGS_MAIN_Structures-Table 1.csv  2021_ASGS_Non_ABS_Structures-Table 1.csv  2021_ASGS_RA_Structures-Table 1.csv  2021_ASGS_SOS_UCL_Structures-Table 1.csv  2021_ASGS_SUA_Structures-Table 1.csv
SmallCensusData/Metadata_2021_GCP_DataPack_R1_R2/: Cell Descriptors Information-Table 1.csv  Table Number, Name, Population-Table 1.csv
(+1785 files in other folders)
